# sosviz

./: .build.yml  .editorconfig  .gitignore  .gitlab-ci.yml  LICENSE  MANIFEST.in  Makefile  README.md  check-patches  pyproject.toml  requirements-dev.txt
.github/workflows/: ci.yml
sosstat/: __init__.py  __main__.py  bits.py
sosstat/collect/: __init__.py  ip.py  irq.py  kernel.py  libvirt.py  ovs.py  pci.py  platform.py  software.py  topo.py  tuning.py
sosstat/output/: __init__.py  dot.py  json.py  text.py
sosviz/: __main__.py  bits.py
sosviz/collect/: __init__.py  ip.py  irq.py  libvirt.py  ovs.py  platform.py  software.py  topo.py  tuning.py
sosviz/output/: __init__.py  dot.py  json.py  svg.py  text.py
